[package]
name = "RPC"
version = "0.1.0"
authors = ["blueslimee <blueslimexdfodeu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "^0.2"
tokio = { version = "0.2.22", features = ["time", "full"] }
rand = "0.7.3"